improving the collection endpoint, and adding it's test's readme updates, openapi updates
